--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/sakshee15/SY_EDI-2_Websocket-based-smart-attendance-system#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.1",
     "ws": "^8.12.1"
   }
 }
